fix: aligned logo and selector

--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -7,11 +7,12 @@
 }
 
 .modal {
-    min-width: 320px;
-    max-width: 500px;
-    background-color: #fafafa;
-    box-shadow: 0px 0px 15px 8px rgba(0,0,0,0.41);
-    border-radius: 10px;
+  min-width: 320px;
+  max-width: 500px;
+  background-color: #fafafa;
+  box-shadow: 0px 0px 15px 8px rgba(0,0,0,0.41);
+  border-radius: 10px;
+  z-index: 1;
 }
 
 .wrapp {
